...
                                                    <rect key="frame" x="15" y="7" width="212" height="18"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <accessibility key="accessibilityConfiguration" label="session-times"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" label="sessions">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                                <constraint firstAttribute="height" constant="40" id="5C7-bM-e8w"/>
                                            </constraints>
                                            <state key="normal" title="Proceed to Checkout">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="Booking Summary" id="Oe5-dm-UVc">
                        <barButtonItem key="rightBarButtonItem" title="Exit" id="gfM-Gv-FNt">
                            <connections>
                                <action selector="barButtonRightDidTapped:" destination="xrt-rT-LaX" id="MJb-Kj-ZvQ"/>
...
                                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VMR-2R-Nge">
                                                                        <rect key="frame" x="0.0" y="40" width="240.5" height="30"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="password-field" label="password-field"/>
                                                                        <nil key="textColor"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                            <constraint firstAttribute="height" constant="40" id="3ZN-NP-RjG"/>
                                                        </constraints>
                                                        <state key="normal" title="Login">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        </state>
...
                                                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                                                    </textField>
                                                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4ci-RS-YMK">
                                                                                        <rect key="frame" x="0.0" y="92" width="240.5" height="30"/>
                                                                                        <nil key="textColor"/>
...
