...
        sessionDetailsView.movieSession = viewModel.movieSession
        
        // UPDATE BUTTON TEXT based on whether user is logged in or not
        if viewModel.user != nil {
            placeOrderButton.setTitle("Place Order", for: .normal)
        } else {
            placeOrderButton.setTitle("Login to place your order", for: .normal)
        }
        viewModel.checkAuth()
    }
    
    // CHECK LOGIN everytime
    override func viewDidAppear(_ animated: Bool) {
...
}

extension CheckoutVC: CheckoutViewModelDelegate {
    
    func userLoggedIn(_ user: User) {
        checkoutTableView.reloadData()
        placeOrderButton.setTitle("Place order", for: .normal)
    }
    
    func bookingPlaced(_ booking: Booking) {
        performSegue(withIdentifier: "placeOrderIfLoggedIn", sender: booking)
    }
    
...
